# umamusume-agent-prompt

./: .env.example  .gitignore  README.md  download_models.py  main.py  mcpserver.py  pyproject.toml  pytest.ini
.github/workflows/: backend-ci.yml
examples/: Admire_Vega.md  Agnes_Tachyon.md  Cheval_Grand.md  Curren_Chan.md  Daiwa_Scarlet.md  Gentildonna.md  Grass_Wonder.md  Manhattan_Cafe.md  Maruzensky.md  Matikane_tannhauser.md  Mayano_Top_Gun.md  Mejiro_McQueen.md  Mihono_Bourbon.md  Narita_Top_Road.md  Neo_Universe.md  Nice_Nature.md  Oguri_Cap.md  Orfevre.md  Rice_Shower.md  Sakura_Chiyono_O.md  Satono_Crown.md  Satono_Diamond.md  Silence_Suzuka.md  Smart_Falcon.md  Special_Week.md  Still_in_Love.md  T_M__Opera_O.md  Tokai_Teio.md  Verxina.md  Vivlos.md  Win_Variation.md
scripts/: build_SillyTavern_card.py
tests/: test_biligame_crawler.py  test_crawler.py  test_google.py  test_mcp_tool.py  test_mcp_tool_crawler.py  test_mcp_tool_crawler_moegirl.py  test_mcp_tool_google.py  test_moegirl_crawler.py  test_stream_mcp.py  test_visual_capture_pdf.py  test_visual_capture_pdf_headful.py  test_visual_crawler.py  test_visual_crawler_bilibili.py  test_visual_crawler_moegirl.py  test_visual_docling_parse_png.py  test_visual_parse_pdf.py  test_visual_parse_png.py
umamusume_prompt/: __init__.py  characters.py  cli.py  config.py  pipeline.py  pipeline_sillytavern.py
umamusume_prompt/mcp/: server.py
umamusume_prompt/prompts/: build_SillyTavern_character.md  build_prompt.md  collect_web.md  umamusume_base_info.md
umamusume_prompt/web/: crawler.py  process.py  search.py  (+1 more)
